--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,41 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-/* .App {
-  text-align: center;
+@font-face {
+  font-family: 'Pretendard';
+  src: url('./assets//fonts//PretendardVariable.ttf') format('ttf');
+  font-weight: normal;
+  font-style: normal;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
